# ml-for-colorgrading

./: .gitignore  README.md  apply_grade.py  movie_titles_acquisition_annotated.csv  pyproject.toml  train_grade.py  train_style.py
colorgrade/: __init__.py  color.py  corpus.py  losses.py  media.py  model.py  style.py
