[project]
name = "colorgrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "psutil>=7.2.2",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]
